Fix z-index problem for mobile menu.

--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -52,7 +52,7 @@
   
   // Z-index layers
   --z-index-header: 1000;
-  --z-index-mobile-menu: 999;
+  --z-index-mobile-menu: 990;
 }
 
 // Fluid padding between 768px and 1440px viewport widths
