--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -26,4 +26,4 @@ $z-index-modal: 500;
 $z-index-popover: 600;
 $z-index-tooltip: 700;
 $z-index-header: 1000;
-$z-index-mobile-menu: 999;
+$z-index-mobile-menu: 990;
